--- a/app/code/Magento/BraintreeTwo/i18n/en_US.csv
+++ b/app/code/Magento/BraintreeTwo/i18n/en_US.csv
@@ -6,3 +6,4 @@
 "processorAuthorizationCode","Processor Authorization Code"
 "processorResponseCode","Processor Response Code"
 "processorResponseText","Processor Response Text"
+"braintreetwo", "Braintree"
