--- a/app/code/Magento/BraintreeTwo/i18n/en_US.csv
+++ b/app/code/Magento/BraintreeTwo/i18n/en_US.csv
@@ -6,6 +6,6 @@
 "processorAuthorizationCode","Processor Authorization Code"
 "processorResponseCode","Processor Response Code"
 "processorResponseText","Processor Response Text"
-"braintreetwo", "Braintree",
+"braintreetwo", "Braintree"
 "liabilityShifted", "Liability Shifted"
 "liabilityShiftPossible", "Liability Shift Possible"
