MAGETWO-46354: Integrate Kount for storefront
- CR

--- a/app/code/Magento/BraintreeTwo/i18n/en_US.csv
+++ b/app/code/Magento/BraintreeTwo/i18n/en_US.csv
@@ -9,3 +9,5 @@
 "braintreetwo", "Braintree"
 "liabilityShifted", "Liability Shifted"
 "liabilityShiftPossible", "Liability Shift Possible"
+"riskDataId", "Risk ID"
+"riskDataDecision", "Risk Decision"
