--- a/app/code/Magento/Paypal/i18n/en_US.csv
+++ b/app/code/Magento/Paypal/i18n/en_US.csv
@@ -693,3 +693,4 @@ unverified,unverified
 Eligible,Eligible
 Ineligible,Inligible
 "PayPal Express Checkout","PayPal Express Checkout"
+"payflowpro", "PayflowPro"
