--- a/app/code/Magento/CatalogUrlRewrite/i18n/en_US.csv
+++ b/app/code/Magento/CatalogUrlRewrite/i18n/en_US.csv
@@ -5,3 +5,4 @@
 "Product URL Suffix","Product URL Suffix"
 "Use Categories Path for Product URLs","Use Categories Path for Product URLs"
 "Create Permanent Redirect for URLs if URL Key Changed","Create Permanent Redirect for URLs if URL Key Changed"
+"Generate URL Rewrites for Products on Category Save","Generate URL Rewrites for Products on Category Save"
