MC-6041: Implement a new authorize.net client to work with the new API for MC-4239
- Refactored client to be compatible with payment adapter flow

--- a/app/code/Magento/AuthorizenetAcceptjs/i18n/en_US.csv
+++ b/app/code/Magento/AuthorizenetAcceptjs/i18n/en_US.csv
@@ -1,5 +1,4 @@
 Authorize.net,Authorize.net
 "API Endpoint URL","API Endpoint URL"
-"Invalid request type.","Invalid request type."
+"Invalid payload type.","Invalid payload type."
 "Something went wrong in the payment gateway.","Something went wrong in the payment gateway."
-"Invalid response type.","Invalid response type."
