AC-10815 - API Input validation

--- a/app/design/adminhtml/Magento/backend/i18n/en_US.csv
+++ b/app/design/adminhtml/Magento/backend/i18n/en_US.csv
@@ -547,3 +547,4 @@ Dashboard,Dashboard
 "Web Section","Web Section"
 "Store Email Addresses Section","Store Email Addresses Section"
 "Email to a Friend","Email to a Friend"
+"Invalid input.","Invalid input."
